# PolyScope-X-10.4-SDK

./: README.txt
.devcontainer/: Dockerfile  devcontainer.json
sdk-polyscopex-5.0.36/: install.sh  readme.txt
sdk-polyscopex-5.0.36/samples/: tools-1.0.0.urcapx
sdk-polyscopex-5.0.36/samples/calibration-info/: manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/datastorage/: README.md  manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/devices/: README.md  manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/gripdistance/: .eslintrc.json  README.md  angular.json  karma.conf.js  manifest.yaml  package.json  tsconfig.editor.json  tsconfig.json  tsconfig.spec.json
sdk-polyscopex-5.0.36/samples/macvlan/: README.md  manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/rtde-sample/: manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/simple-docker/: manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/simple-gripper/: manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/simple-gripper/simple-gripper-backend/src/simple-gripper/: package.xml  setup.cfg  setup.py
sdk-polyscopex-5.0.36/samples/simple-gripper/simple-gripper-backend/src/simple-gripper/simple_gripper/: main.py  serializer.py  serializer_sim.py
sdk-polyscopex-5.0.36/samples/simple-rest/: README.md  manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/simple-ros2-node/: Dockerfile  README.md  manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/simple-ros2-node/src/simple-ros2-node/: package.xml  setup.cfg  setup.py
sdk-polyscopex-5.0.36/samples/simple-ros2-node/src/simple-ros2-node/simple_ros2_node/: main.py
sdk-polyscopex-5.0.36/samples/simple-websocket/: README.md  manifest.yaml  package.json
sdk-polyscopex-5.0.36/samples/simple-xmlrpc/: README.md  manifest.yaml  package.json
sdk-polyscopex-5.0.36/urcap-generator/: README.md  checknode.js  package.json  sh_newurcap  utils.js
sdk-polyscopex-5.0.36/urcap-generator/generators/docker-ros2/templates/src/ros2_node/: package.xml  setup.cfg  setup.py
sdk-polyscopex-5.0.36/urcap-generator/generators/docker-ros2/templates/src/ros2_node/ros2_node/: main.py
ursim-polyscopex-0.9.68/: install.sh
(+305 files in other folders)
