<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>simple-ros2-node</name>
    <version>0.0.0</version>
    <description>Simple ROS2 node, a sample where standard analog out 0 is sent to standard analog out 1</description>
    <maintainer email="user@todo.todo">user</maintainer>
    <license>TODO: License declaration</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>urinterfaces</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>