<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>simple-gripper</name>
    <version>0.0.0</version>
    <description>Gripper Sample URCap</description>
    <maintainer email="support@universal-robots.com">Universal Robots A/S</maintainer>
    <license>Sample License</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>urinterfaces</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>