<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name><%= ros2NodeName %></name>
    <version>0.0.0</version>
    <description><%= ros2NodeDesc %> description</description>
    <maintainer email="user@todo.todo">user</maintainer>
    <license>TODO: License declaration</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>urinterfaces</exec_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>